--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "fs-extra": "^8.0.1",
     "gluegun": "^2.1.0"
   },
   "devDependencies": {
-    "standard": "^12.0.1",
+    "jest": "^23.6.0",
     "prettier": "^1.12.1",
-    "jest": "^23.6.0"
+    "standard": "^12.0.1"
   },
   "jest": {
     "testEnvironment": "node"
