--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^8.0.1",
-    "gluegun": "^2.1.0"
+    "gluegun": "^2.1.0",
+    "lodash": "^4.17.13",
+    "mem": "^4.0.0"
   },
   "devDependencies": {
     "jest": "^23.6.0",
